# MyVideoDemo

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  mylog.cpp  mylog.h  native-render.cpp
app/src/main/java/com/example/myvideodemo/: MainActivity.java  MyGLSurfaceView.java  MyNativeRenderer.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
